--- a/MapApp/public/index.html
+++ b/MapApp/public/index.html
@@ -3,7 +3,7 @@
 <html class="no-js" ng-app="meanMapApp">
 <head>
     <meta charset="utf-8">
-    <title>Scotch MEAN Map</title>
+    <title>Bathroom Finder App</title>
     <meta name="description" content="An example demonstrating Google Map integration with MEAN Apps">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- CSS -->
@@ -32,10 +32,10 @@
     <div class="header">
         <ul class="nav nav-pills pull-right">
             <!-- Links to the two menu views included -->
-            <li active><a href="/#/join">Join the Team</a></li>
-            <li disabled><a href="/#/find">Find Teammates</a></li>
+            <li active><a href="/#/join">Add Bathroom</a></li>
+            <li disabled><a href="/#/find">Find Bathrooms</a></li>
         </ul>
-        <h3 class="text-muted">The Scotch MEAN MapApp</h3>
+        <h3 class="text-muted">Bathroom Finder</h3>
     </div>
     <!-- Map and Side Panel -->
     <div class="row content">
@@ -48,11 +48,7 @@
 
     </div>
     <hr/>
-    <!-- Footer -->
-    <div class="footer">
-        <p class="text-center"><span class="glyphicon glyphicon-check"></span> Created by Ahmed Haque for Scotch IO -
-            <a href="https://scotch.io/">App Tutorial</a> | <a href="https://github.com/afhaque/MeanMapAppV2.0">Github Repo</a></p>
-    </div>
+
 </div>
 </body>
 </html>
