--- a/MapApp/public/index.html
+++ b/MapApp/public/index.html
@@ -32,8 +32,8 @@
     <div class="header">
         <ul class="nav nav-pills pull-right">
             <!-- Links to the two menu views included -->
-            <li active><a href="/#/add">Add Bathroom</a></li>
-            <li disabled><a href="/#/find">Find Bathrooms</a></li>
+            <li disabeled><a href="/#/add">Add Bathroom</a></li>
+            <li active><a href="/#/find">Find Bathrooms</a></li>
         </ul>
         <h3 class="text-muted">Bathroom Finder</h3>
     </div>
