--- a/MapApp/public/index.html
+++ b/MapApp/public/index.html
@@ -34,6 +34,7 @@
             <!-- Links to the two menu views included -->
             <li disabeled><a href="/#/add">Add Bathroom</a></li>
             <li active><a href="/#/find">Find Bathrooms</a></li>
+            <li class="hide"><a href="/#/rate">Rate Bathroom</a></li>
         </ul>
         <h3 class="text-muted">Bathroom Finder</h3>
     </div>
