add rateCtrl angular controller

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
     <script src="js/addCtrl.js"></script>
     <script src="js/gservice.js"></script>
     <script src="js/queryCtrl.js"></script>
+    <script src="js/rateCtrl.js"></script>
 
 </head>
 <!-- Removed ng-controller. Now this will be handled in app.js -->
