fix jquery link error

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <!-- Modernizr -->
     <script src="../bower_components/modernizr/bin/modernizr"></script>
     <!-- JS Source -->
-    <script src="../bower_components/jquery/jquery.js"></script>
+    <script src="../bower_components/jquery/src/jquery.js"></script>
     <script src="../bower_components/angular/angular.js"></script>
     <script src="../bower_components/angular-route/angular-route.js"></script>
     <script src="../bower_components/angularjs-geolocation/dist/angularjs-geolocation.min.js"></script>
@@ -33,10 +33,10 @@
     <div class="header">
 
         <ul class="nav nav-pills pull-right">
-            <!-- Links to the two menu views included -->
-            <li disabeled><a href="/#/add">Add Bathroom</a></li>
-            <li active><a href="/#/find">Find Bathrooms</a></li>
-            <li class="hide"><a href="/#/rate">Rate Bathroom</a></li>
+            <!-- Links to the three menu views included -->
+            <li><a href="/#/add">Add Bathroom</a></li>
+            <li><a href="/#/find">Find Bathrooms</a></li>
+            <li class="hidden"><a href="/#/rate">Rate Bathroom</a></li>
         </ul>
         <h3 class="text-muted">Bathroom Finder</h3>
     </div>
@@ -53,5 +53,7 @@
     <hr/>
 
 </div>
+
+</script>
 </body>
 </html>
