--- a/public/index.html
+++ b/public/index.html
@@ -1,59 +1,62 @@
 <!doctype html>
 <!-- Declares meanMapApp as the starting Angular module -->
 <html class="no-js" ng-app="meanMapApp">
-<head>
-    <meta charset="utf-8">
-    <title>Bathroom Finder App</title>
-    <meta name="description" content="An example demonstrating Google Map integration with MEAN Apps">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- CSS -->
-    <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css"/>
-    <link rel="stylesheet" href="style.css"/>
 
-    <!-- Google Maps API -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBy8SbaiHYcQ9jG5yb3sh6H4liB6EblhyU"></script>
-    <!-- Modernizr -->
-    <script src="../bower_components/modernizr/bin/modernizr"></script>
-    <!-- JS Source -->
-    <script src="../bower_components/jquery/src/jquery.js"></script>
-    <script src="../bower_components/angular/angular.js"></script>
-    <script src="../bower_components/angular-route/angular-route.js"></script>
-    <script src="../bower_components/angularjs-geolocation/dist/angularjs-geolocation.min.js"></script>
-    <!-- Angular Source -->
-    <script src="js/app.js"></script>
-    <script src="js/addCtrl.js"></script>
-    <script src="js/gservice.js"></script>
-    <script src="js/queryCtrl.js"></script>
-    <script src="js/rateCtrl.js"></script>
+<head>
+  <meta charset="utf-8">
+  <title>Bathroom Finder App</title>
+  <meta name="description" content="An example demonstrating Google Map integration with MEAN Apps">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- CSS -->
+  <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css" />
+  <link rel="stylesheet" href="style.css" />
+
+  <!-- Google Maps API -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBy8SbaiHYcQ9jG5yb3sh6H4liB6EblhyU"></script>
+  <!-- Modernizr -->
+  <script src="../bower_components/modernizr/bin/modernizr"></script>
+  <!-- JS Source -->
+  <script src="../bower_components/jquery/src/jquery.js"></script>
+  <script src="../bower_components/angular/angular.js"></script>
+  <script src="../bower_components/angular-route/angular-route.js"></script>
+  <script src="../bower_components/angularjs-geolocation/dist/angularjs-geolocation.min.js"></script>
+  <!-- Angular Source -->
+  <script src="js/app.js"></script>
+  <script src="js/addCtrl.js"></script>
+  <script src="js/gservice.js"></script>
+  <script src="js/queryCtrl.js"></script>
+  <script src="js/rateCtrl.js"></script>
 
 </head>
 <!-- Removed ng-controller. Now this will be handled in app.js -->
+
 <body>
-<div class="container">
+  <div class="container">
     <div class="header">
 
-        <ul class="nav nav-pills pull-right">
-            <!-- Links to the three menu views included -->
-            <li><a href="/#/add">Add Bathroom</a></li>
-            <li><a href="/#/find">Find Bathrooms</a></li>
-            <li class="hidden"><a href="/#/rate">Rate Bathroom</a></li>
-        </ul>
-        <h3 class="text-muted">Bathroom Finder</h3>
+      <ul class="nav nav-pills pull-right">
+        <!-- Links to the three menu views included -->
+        <li ng-class="{active: $route.current.activetab == 'add'}"><a href="/#/add">Add Bathroom</a></li>
+        <li ng-class="{active: $route.current.activetab == 'find'}"><a href="/#/find">Find Bathrooms</a></li>
+        <li class="hidden"><a href="/#/rate">Rate Bathroom</a></li>
+      </ul>
+      <h3 class="text-muted">Bathroom Finder</h3>
     </div>
     <!-- Map and Side Panel -->
     <div class="row content">
-        <!-- Google Map -->
-        <div class="col-md-7">
-            <div id="map"></div>
-        </div>
-        <!-- Side Panel -- Now Handled by ng-view -->
-        <div ng-view></div>
+      <!-- Google Map -->
+      <div class="col-md-7">
+        <div id="map"></div>
+      </div>
+      <!-- Side Panel -- Now Handled by ng-view -->
+      <div ng-view></div>
 
     </div>
-    <hr/>
+    <hr />
 
-</div>
+  </div>
 
-</script>
+  </script>
 </body>
+
 </html>
